Added models assets

--- a/make_map.ipynb
+++ b/make_map.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "\n",
     "\n",
     "icon_size = (14, 14)\n",
-    "\n",
+    "layer_stations = folium.FeatureGroup()\n",
     "for feature in stations['features']:\n",
     "    lon, lat = feature['geometry']['coordinates']\n",
     "    icon_url = feature['properties']['icon']\n",
@@ -136,7 +136,10 @@
     "    \n",
     "    marker = folium.map.Marker([lat, lon], icon=icon,\n",
     "                               popup=folium.map.Popup(popup))\n",
-    "    mapa.add_children(marker)"
+    "    layer_stations.add_children(marker)\n",
+    "\n",
+    "layer_stations.layer_name = 'Stations'\n",
+    "mapa.add_children(layer_stations)"
    ]
   },
   {
@@ -165,6 +168,7 @@
     "                                      opacity=0.6,\n",
     "                                      dashArray='0')\n",
     "\n",
+    "layer_hfradar = folium.FeatureGroup()\n",
     "for feature in hfradar['features']:\n",
     "    if feature['geometry']['type'] == 'Point':\n",
     "        lon, lat = feature['geometry']['coordinates']\n",
@@ -175,11 +179,14 @@
     "                                          icon_size=(14, 14))\n",
     "        marker = folium.map.Marker([lat, lon], icon=icon,\n",
     "                                   popup=folium.map.Popup(popup))\n",
-    "        mapa.add_children(marker)\n",
+    "        layer_hfradar.add_children(marker)\n",
     "    elif feature['geometry']['type'] == 'Polygon':\n",
     "        gjson = folium.features.GeoJson(feature,\n",
     "                                        style_function=style_function)\n",
-    "        mapa.add_children(gjson)"
+    "        layer_hfradar.add_children(gjson)\n",
+    "\n",
+    "layer_hfradar.layer_name = 'HFRadar'\n",
+    "mapa.add_children(layer_hfradar)"
    ]
   },
   {
@@ -200,12 +207,12 @@
     "import json\n",
     "\n",
     "with open('gliders/gliders.geojson') as f:\n",
-    "    stations = json.load(f)\n",
+    "    gliders = json.load(f)\n",
     "\n",
     "\n",
     "icon_size = (14, 14)\n",
-    "\n",
-    "for feature in stations['features']:\n",
+    "layer_gliders = folium.FeatureGroup()\n",
+    "for feature in gliders['features']:\n",
     "    lon, lat = feature['geometry']['coordinates']\n",
     "    icon_url = feature['properties']['icon']\n",
     "    popup = feature['properties']['popupcontent']\n",
@@ -215,7 +222,52 @@
     "    \n",
     "    marker = folium.map.Marker([lat, lon], icon=icon,\n",
     "                               popup=folium.map.Popup(popup))\n",
-    "    mapa.add_children(marker)"
+    "    layer_gliders.add_children(marker)\n",
+    "\n",
+    "layer_gliders.layer_name = 'AUVs'\n",
+    "mapa.add_children(layer_gliders)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numerical Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import iris\n",
+    "import warnings\n",
+    "from gridgeo import GridGeo\n",
+    "from netCDF4 import Dataset\n",
+    "\n",
+    "\n",
+    "models = ['http://omgsrv1.meas.ncsu.edu:8080/thredds/dodsC/fmrc/sabgom/SABGOM_Forecast_Model_Run_Collection_best.ncd',\n",
+    "          'http://crow.marine.usf.edu:8080/thredds/dodsC/FVCOM-Nowcast-Agg.nc']\n",
+    "\n",
+    "layer_models = folium.FeatureGroup()\n",
+    "for model in models:\n",
+    "    with Dataset(model) as nc:\n",
+    "        try:\n",
+    "            grid = GridGeo(nc)\n",
+    "        except ValueError:\n",
+    "            with warnings.catch_warnings():\n",
+    "                warnings.simplefilter('ignore')\n",
+    "                cube = iris.load_cube(model, 'sea_water_potential_temperature')\n",
+    "                grid = GridGeo(cube)\n",
+    "        gj = folium.GeoJson(grid.outline.__geo_interface__)\n",
+    "        gj.add_children(folium.Popup(getattr(nc, 'summary', url)))\n",
+    "        layer_models.add_children(gj)\n",
+    "\n",
+    "layer_models.layer_name = 'Models'\n",
+    "mapa.add_children(layer_models)"
    ]
   },
   {
@@ -226,6 +278,8 @@
    },
    "outputs": [],
    "source": [
+    "mapa.add_children(folium.LayerControl())\n",
+    "\n",
     "mapa"
    ]
   }
@@ -246,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
