--- a/make_map.ipynb
+++ b/make_map.ipynb
@@ -59,14 +59,15 @@
    "source": [
     "import os\n",
     "\n",
-    "fname = 'hfradar/hfradar.geojson'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if True:\n",
+    "    fname = 'hfradar/hfradar.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd hfradar/\n",
+    "    %pushd hfradar/\n",
     "\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
@@ -77,13 +78,14 @@
    },
    "outputs": [],
    "source": [
-    "fname = 'stations/'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if True:\n",
+    "    fname = 'stations/stations.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd stations/\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %pushd stations/\n",
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
@@ -94,13 +96,14 @@
    },
    "outputs": [],
    "source": [
-    "fname = 'gliders//'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if True:\n",
+    "    fname = 'gliders/gliders.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd stations/\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %pushd stations/\n",
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
@@ -249,7 +252,8 @@
     "from netCDF4 import Dataset\n",
     "\n",
     "\n",
-    "models = ['http://omgsrv1.meas.ncsu.edu:8080/thredds/dodsC/fmrc/sabgom/SABGOM_Forecast_Model_Run_Collection_best.ncd',\n",
+    "models = ['http://omgsrv1.meas.ncsu.edu:8080/thredds/dodsC/fmrc/sabgom/'\n",
+    "          'SABGOM_Forecast_Model_Run_Collection_best.ncd',\n",
     "          'http://crow.marine.usf.edu:8080/thredds/dodsC/FVCOM-Nowcast-Agg.nc']\n",
     "\n",
     "layer_models = folium.FeatureGroup()\n",
