Glider Track and Model Grid

--- a/make_map.ipynb
+++ b/make_map.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -35,18 +35,16 @@
     "\n",
     "lon, lat = -86.276, 30.935 \n",
     "\n",
-    "tiles = ('http://services.arcgisonline.com/arcgis/rest/'\n",
-    "         'services/Ocean/World_Ocean_Base/MapServer/tile/{z}/{y}/{x}')\n",
-    "\n",
-    "mapa = folium.Map(location=[lat, lon], tiles=tiles,\n",
-    "                  attr='ESRI', zoom_start=5)"
+    "mapa = folium.Map(location=[lat, lon], zoom_start=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the GIS database from the spreadsheets"
+    "## Create the GIS database from the spreadsheets\n",
+    "\n",
+    "Change from `False` to `True` to recreate the files."
    ]
   },
   {
@@ -59,14 +57,15 @@
    "source": [
     "import os\n",
     "\n",
-    "fname = 'hfradar/hfradar.geojson'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if False:\n",
+    "    fname = 'hfradar/hfradar.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd hfradar/\n",
+    "    %pushd hfradar/\n",
     "\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
@@ -77,13 +76,14 @@
    },
    "outputs": [],
    "source": [
-    "fname = 'stations/'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if False:\n",
+    "    fname = 'stations/stations.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd stations/\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %pushd stations/\n",
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
@@ -94,20 +94,57 @@
    },
    "outputs": [],
    "source": [
-    "fname = 'gliders//'\n",
-    "if os.path.isfile(fname):\n",
-    "    os.unlink(fname)\n",
+    "if False:\n",
+    "    fname = 'gliders/gliders.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
     "\n",
-    "%pushd stations/\n",
-    "%run convert.py\n",
-    "%popd"
+    "    %pushd gliders/\n",
+    "    %run convert.py\n",
+    "    %popd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if False:\n",
+    "    fname = 'glider_tracks/georef_glider_triangles.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
+    "\n",
+    "    %pushd glider_tracks/\n",
+    "    %run convert.py\n",
+    "    %popd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if False:\n",
+    "    fname = 'models/models.geojson'\n",
+    "    if os.path.isfile(fname):\n",
+    "        os.unlink(fname)\n",
+    "\n",
+    "    %pushd models/\n",
+    "    %run convert.py\n",
+    "    %popd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stations"
+    "## Plot Stations/Moorings/Fixed Platforms"
    ]
   },
   {
@@ -146,15 +183,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HF-Radar"
+    "## Plot HF-Radar stations and range"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -165,8 +201,7 @@
     "style_function = lambda feature: dict(fillColor='#DEFFDE',\n",
     "                                      color='#AECCAE',\n",
     "                                      weight=1,\n",
-    "                                      opacity=0.6,\n",
-    "                                      dashArray='0')\n",
+    "                                      opacity=0.6)\n",
     "\n",
     "layer_hfradar = folium.FeatureGroup()\n",
     "for feature in hfradar['features']:\n",
@@ -181,9 +216,9 @@
     "                                   popup=folium.map.Popup(popup))\n",
     "        layer_hfradar.add_children(marker)\n",
     "    elif feature['geometry']['type'] == 'Polygon':\n",
-    "        gjson = folium.features.GeoJson(feature,\n",
-    "                                        style_function=style_function)\n",
-    "        layer_hfradar.add_children(gjson)\n",
+    "        gj = folium.features.GeoJson(feature,\n",
+    "                                     style_function=style_function)\n",
+    "        layer_hfradar.add_children(gj)\n",
     "\n",
     "layer_hfradar.layer_name = 'HFRadar'\n",
     "mapa.add_children(layer_hfradar)"
@@ -193,14 +228,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AUVs"
+    "## Plot AUVs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -232,39 +267,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numerical Models"
+    "## Plot Glider Tracks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import iris\n",
-    "import warnings\n",
-    "from gridgeo import GridGeo\n",
-    "from netCDF4 import Dataset\n",
+    "with open('glider_tracks/georef_glider_triangles.geojson') as f:\n",
+    "    tracks = json.load(f)\n",
     "\n",
+    "style_function = lambda feature: dict(fillColor='#D8D8D8',\n",
+    "                                      weight=2,\n",
+    "                                      opacity=0.6)\n",
     "\n",
-    "models = ['http://omgsrv1.meas.ncsu.edu:8080/thredds/dodsC/fmrc/sabgom/SABGOM_Forecast_Model_Run_Collection_best.ncd',\n",
-    "          'http://crow.marine.usf.edu:8080/thredds/dodsC/FVCOM-Nowcast-Agg.nc']\n",
+    "layer_tracks = folium.FeatureGroup()\n",
+    "for feature in tracks['features']:\n",
+    "    gj = folium.features.GeoJson(feature,\n",
+    "                                 style_function=style_function)\n",
+    "    layer_tracks.add_children(gj)\n",
+    "\n",
+    "layer_tracks.layer_name = 'Glider Tracks'\n",
+    "mapa.add_children(layer_tracks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot Numerical Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('models/models.geojson') as f:\n",
+    "    models = json.load(f)\n",
+    "\n",
+    "style_function = lambda feature: dict(fillColor='#555555',\n",
+    "                                      color='#555555',\n",
+    "                                      weight=1,\n",
+    "                                      opacity=0.5)\n",
     "\n",
     "layer_models = folium.FeatureGroup()\n",
-    "for model in models:\n",
-    "    with Dataset(model) as nc:\n",
-    "        try:\n",
-    "            grid = GridGeo(nc)\n",
-    "        except ValueError:\n",
-    "            with warnings.catch_warnings():\n",
-    "                warnings.simplefilter('ignore')\n",
-    "                cube = iris.load_cube(model, 'sea_water_potential_temperature')\n",
-    "                grid = GridGeo(cube)\n",
-    "        gj = folium.GeoJson(grid.outline.__geo_interface__)\n",
-    "        gj.add_children(folium.Popup(getattr(nc, 'summary', url)))\n",
-    "        layer_models.add_children(gj)\n",
+    "for feature in models['features']:\n",
+    "    gj = folium.features.GeoJson(feature,\n",
+    "                                 style_function=style_function)\n",
+    "    layer_models.add_children(gj)\n",
     "\n",
     "layer_models.layer_name = 'Models'\n",
     "mapa.add_children(layer_models)"
